--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
               value: "lackKnowledge",
               label: "Kurang pengetahuan parenting & perawatan bayi",
             },
-            {
-              value: "wantExercise",
-              label: "Ingin senam hamil untuk kebugaran & persiapan persalinan",
-            },
+            { value: "wantExercise", label: "Ingin berolahraga" },
             { value: "other", label: "Lainnya" },
           ],
         },
@@ -553,7 +550,7 @@
             );
           }
           if (complaints.includes("wantExercise")) {
-            recs.push("Kelas Senam Hamil (27-41 Minggu)");
+            recs.push("Senam Hamil");
           }
 
           if (
